# logging

./: config.json  config_secret_example.json
backend/: pyproject.toml
discord_client/: pyproject.toml
discord_client/src/logging_bot/: __main__.py
frontend/: package-lock.json  package.json
pocketbase/: .gitignore  channel_helpers.go  dispatch.go  go.mod  pocketbase.go  utils.go
